# pycpy

./: README.md  builds.py  dev-requirements.txt  pyproject.toml  requirements.txt  virtenv.py
.github/workflows/: main.yml
pycpy/: __init__.py  __main__.py  builds.py  main.py  virtenv.py
tests/: conftest.py  test_gitignore.py  test_pyproject.py  test_readme.py  test_venv.py
