[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycpy"
version = "0.0.2"
authors = [
  { name="Craig Richards", email="craig@greywidget.co.uk" },
]
description = "pycpy"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typer",
]
[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
pycpy = "pycpy.main:app"

[project.urls]
"Homepage" = "https://github.com/greywidget/pycpy"
"Bug Tracker" = "https://github.com/greywidget/pycpy/issues"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_incomplete_defs = true
ignore_missing_imports = true


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
include = [
  "pycpy/*.py",
]
exclude = [
]